--- a/pom.xml
+++ b/pom.xml
@@ -1,60 +1,169 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
 
-  <groupId>isap.vstu.by</groupId>
-  <artifactId>trpo-maven-profile-log</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
 
-  <name>trpo-maven-profile-log</name>
-  <url>http://maven.apache.org</url>
+<groupId>isap.vstu.by</groupId>
+<artifactId>trpo-maven-profile-lag</artifactId>
+<version>1.0-SNAPSHOT</version>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+<name>trpo-maven-profile-lag</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-</project>
+<url>http://www.example.com</url>
 
-<description>
-  <url>
-  <inceptionYear>
+<properties>
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<maven.compiler.source>1.7</maven.compiler.source>
+<maven.compiler.target>1.7</maven.compiler.target>
+</properties>
 
-    <licenses>
-        <license>
-            <name>
-            <url>
-            <distribution>
-        </license>
-    </licenses>
-    
-   <developers>
-        <developer>
-            <id>
-            <name>
-            <email>
-            <url>
-            <timezone>
-            <properties>
-                <skype>
-            </properties>
-        </developer>
-    </developers>
-    
-            <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+<dependencies>
+
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.11</version>
+<scope>test</scope>
+</dependency>
+
+<dependency>
+<groupId>org.apache.logging.log4j</groupId>
+<artifactId>log4j-api</artifactId>
+<version>2.17.2</version>
+</dependency>
+<dependency>
+<groupId>org.apache.logging.log4j</groupId>
+<artifactId>log4j-core</artifactId>
+<version>2.17.2</version>
+</dependency>
+
+</dependencies>
+
+<build>
+
+<pluginManagement>
+
+<plugins>
+
+<plugin>
+<artifactId>maven-clean-plugin</artifactId>
+<version>3.1.0</version>
+</plugin>
+
+<plugin>
+<artifactId>maven-resources-plugin</artifactId>
+<version>3.0.2</version>
+</plugin>
+<plugin>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.8.0</version>
+</plugin>
+<plugin>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.22.1</version>
+</plugin>
+<plugin>
+<artifactId>maven-install-plugin</artifactId>
+<version>2.5.2</version>
+</plugin>
+<plugin>
+<artifactId>maven-deploy-plugin</artifactId>
+<version>2.8.2</version>
+</plugin>
+
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>single</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+              <archive>
+                <manifest>
+                    <mainClass>
+                        isap.vstu.by.App
+                    </mainClass>
+                </manifest>
+              </archive>
+              <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
         </configuration>
-        </plugin>
+  </plugin>
 
+<plugin>
+<artifactId>maven-site-plugin</artifactId>
+<version>3.7.1</version>
+</plugin>
+<plugin>
+<artifactId>maven-project-info-reports-plugin</artifactId>
+<version>3.0.0</version>
+</plugin>
+
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-assembly-plugin</artifactId>
+<executions>
+<execution>
+<phase>package</phase>
+<goals>
+<goal>single</goal>
+</goals>
+</execution>
+</executions>
+<configuration>
+<archive>
+<manifest>
+<mainClass>
+isap.vstu.by.App
+</mainClass>
+</manifest>
+</archive>
+<descriptorRefs>
+<descriptorRef>jar-with-dependencies</descriptorRef>
+</descriptorRefs>
+</configuration>
+</plugin>
+
+</plugins>
+</pluginManagement>
+
+<resources>
+<resource>
+<directory>src/main/resources</directory>
+<filtering>true</filtering>
+</resource>
+</resources>
+
+</build>
+<Loggers>
+        <Root level="all">
+            <AppenderRef ref="${appender-name}"/> 
+        </Root>
+    </Loggers>
+<profiles>
+<profile>
+<id>development</id>
+<properties>
+<appender-name>CONSOLE</appender-name>
+</properties>
+</profile>
+
+<profile>
+<id>file_log</id>
+<activation>
+<activeByDefault>true</activeByDefault>
+</activation>
+<properties>
+<appender-name>FILE</appender-name>
+</properties>
+</profile>
+
+</profiles>
+
+</project>
